Allow the aboutfield row to automatically expand to fit content

--- a/Taylr/Base.lproj/Onboarding.storyboard
+++ b/Taylr/Base.lproj/Onboarding.storyboard
@@ -162,7 +162,7 @@
         <scene sceneID="ziZ-yX-Hqk">
             <objects>
                 <tableViewController storyboardIdentifier="CreateProfile" clearsSelectionOnViewWillAppear="NO" id="4FY-Nx-fFw" customClass="CreateProfileViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="0aF-Ww-ePD">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="0aF-Ww-ePD" customClass="TPKeyboardAvoidingTableView">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -325,7 +325,7 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NYa-St-Knz" id="i4R-TL-1aZ">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gNz-Zb-kjq" customClass="JVFloatLabeledTextView">
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNz-Zb-kjq" customClass="JVFloatLabeledTextView">
                                                     <rect key="frame" x="8" y="8" width="359" height="43"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" name="Cabin-Regular" family="Cabin" pointSize="16"/>
@@ -340,7 +340,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="gNz-Zb-kjq" firstAttribute="leading" secondItem="i4R-TL-1aZ" secondAttribute="leadingMargin" id="QoK-kX-kYy"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="gNz-Zb-kjq" secondAttribute="bottom" id="b11-3J-3B8"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="gNz-Zb-kjq" secondAttribute="bottom" priority="749" id="b11-3J-3B8"/>
                                                 <constraint firstItem="gNz-Zb-kjq" firstAttribute="top" secondItem="i4R-TL-1aZ" secondAttribute="topMargin" id="k1f-Rp-Ptb"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="gNz-Zb-kjq" secondAttribute="trailing" id="nLl-wS-pQa"/>
                                             </constraints>
